<resources>
    <string name="app_name">tdList</string>
    <string name="label_new_task">Criar Tarefa</string>
    <string name="label_title">Titulo</string>
    <string name="label_date">Data</string>
    <string name="label_hour">Hora</string>
    <string name="label_cancel">Cancelar</string>
    <string name="label_tasks">Tarefas</string>
    <string name="label_description_new_task">Nova tarefa</string>
    <string name="label_edit">Editar</string>
    <string name="label_delet">Deletar</string>
    <string name="label_Tarefa">Ops!Você não possui \n nenhuma tarefa</string>
    <string name="label_you_dont_have_tasks">Ops! Você ainda não possui tarefas</string>
</resources>