<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:title="@string/label_new_task"
        app:navigationIcon="@drawable/ic_navigate" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_start"
        android:layout_width="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="32dp"
        android:layout_height="wrap_content"/>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_end"
        android:layout_width="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="32dp"
        android:layout_height="wrap_content"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_title"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/label_title"
        app:layout_constraintEnd_toEndOf="@id/guide_end"
        app:layout_constraintStart_toStartOf="@id/guide_start"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_date"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:startIconDrawable="@drawable/ic_calendar"
        android:hint="@string/label_date"
        android:layout_marginEnd="5dp"
        app:layout_constraintEnd_toStartOf="@id/til_hour"
        app:layout_constraintStart_toStartOf="@id/guide_start"
        app:layout_constraintTop_toBottomOf="@+id/til_title">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:focusable="false"
            android:inputType="none" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_hour"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:startIconDrawable="@drawable/ic_timer"
        android:hint="@string/label_hour"
        app:layout_constraintTop_toTopOf="@id/til_date"
        app:layout_constraintEnd_toEndOf="@id/guide_end"
        app:layout_constraintStart_toEndOf="@id/til_date">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:inputType="none" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_cancel"
        android:layout_width="0dp"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_height="wrap_content"
        android:text="@string/label_cancel"
        app:layout_constraintBottom_toTopOf="@id/btn_newtask"
        app:layout_constraintEnd_toEndOf="@id/guide_end"
        app:layout_constraintStart_toStartOf="@id/guide_start"
        android:textAllCaps="false"/>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_newtask"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        style="@style/Widget.MaterialComponents.Button"
        app:layout_constraintStart_toStartOf="@id/guide_start"
        app:layout_constraintEnd_toEndOf="@id/guide_end"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/label_new_task"
        android:textAllCaps="false"/>

</androidx.constraintlayout.widget.ConstraintLayout>